k8s_new/common/namespace-prod.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hms-prod
  labels:
    environment: prod
